--- a/ldap/doc/en.yaml
+++ b/ldap/doc/en.yaml
@@ -1,80 +1,20 @@
 ---
-name: 禅道开源版 12.3 LDAP插件
+name: ldap
 code: ldap
 type: extension
-site: https://github.com/shynome/zentao-ldap
-author: 'shynome<shynome@gmail.com>'
-abstract: >
-  支持从LDAP服务器上同步用户信息（账号、真实姓名、邮箱），以及使用LDAP验证登录。
+copyright: >
+  xx 2023
+ldap: 
+author: 'xx<twobx@gamil.com>'
+abstract: ldap
 desc: >
-  1.插件安装后，在后台页面会多出一个"LDAP"子页面，可在该页面配置LDAP服务器信息
-  2.在LDAP配置页面可以测试是否能够正常连接LDAP服务器
-  3.保存配置后，点击“手动同步”按钮，从LDAP服务器上同步用户信息
-  4.同步用户信息以后，可以使用LDAP用户登录禅道
-  5.本地用户，通过在账户名称前加“$”符号来登录禅道
+  ldap
 install: |
-  1. 通过禅道的插件管理来进行安装。
-    1.1 使用管理员身份登录禅道，访问插件管理。
-    1.2 打开获得插件页面，搜索找到本插件。
-    1.3 选择自动安装，按照页面提示即可。
-  2. 手工安装，将代码解压缩，然后将目录拷贝到禅道对应的目录，比如module拷贝到zentao的module。
+license: AGPLv3
 releases:
-  1.3.2
-    zentao:
-      compatible: 12.3.stable,12.5.3
-      incompatible:
-    charge: free
-    date: 2020-08-10
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1. 支持12.3,12.5.3
-      2. 新增同步ldap用户设置默认权限分组
-  1.3.1
-    zentao:
-      compatible: 11.5.stable
-      incompatible:
-    charge: free
-    date: 2020-07-30
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1. 修复 name 映射配置未被保存的问题
-  1.3.0
-    zentao:
-      compatible: 11.5.stable
-      incompatible:
-    charge: free
-    date: 2019-05-24
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1. 禁止 ldap 用户修改账号密码
-  1.2.3
-    zentao:
-      compatible: 11.5.stable
-      incompatible:
-    charge: free
-    date: 2019-05-24
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1. 修复 11.5 版本 ldap 账号登录失败
-      2. 修复 11.5 版本 密码二次验证失败
-      3. 修复设置页面的测试服务器及账号是否可用
-  1.2:
-    zentao:
-      compatible: 7.0,7.1,7.2,7.2.4,7.2.5,7.3,12.3,12.5.3
-      incompatible:
-    charge: free
-    date: 2015-10-16
-    conflicts: null
-    depends: null
-    license: LGPL
-    changelog: >
-      1.增加对繁体和英文的支持
-      2.增加对权限控制的支持
+  2.0:
+    zentaoversion: 18.7
+    charge: business
+    license: AGPLv3
+    changelog: add default group info 
+    date: 2023
