--- a/ldap/doc/zh-cn.yaml
+++ b/ldap/doc/zh-cn.yaml
@@ -19,3 +19,13 @@ releases:
       2. 动态开关 LDAP
       3. 支持手机号存储
     date: 2023
+  1.1:
+    zentaoversion: 18.*
+    charge: free
+    license: GPL V3
+    author: 'ZhangSean'
+    changelog: |
+      1. 自动同步登录用户
+      2. 支持电话存储
+      3. 优化代码
+    date: 2024-04-09
