--- a/ldap/doc/zh-tw.yaml
+++ b/ldap/doc/zh-tw.yaml
@@ -19,3 +19,13 @@ releases:
       2. 动态开关 LDAP
       3. 支持手机号存储
     date: 2023
+  1.1:
+    zentaoversion: 18.*
+    charge: free
+    license: GPL V3
+    author: 'ZhangSean'
+    changelog: |
+      1. 自動同步登錄使用者
+      2. 支持電話存儲
+      3. 優化代碼
+    date: 2024-04-09
